--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,12 @@ header .container {
 
 header li {
     display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;margin-left: 16px;
 }
 header li a {
     color: #f5f6fa;
+    text-decoration: none;
 }
 
 .container {
@@ -36,7 +39,8 @@ header li a {
 }
 
 .articles article img {
-    height: 188px;
+    /*height: 188px;*/
+    width: 100%;
 }
 
 .articles article {
@@ -60,6 +64,8 @@ section h2, .articles article {
     padding: 8px;
     display: inline-block;
     text-decoration: none;
+    font-weight: bold;
+    margin-top: 8px;
 }
 .articles article a:hover {
     text-decoration: underline;
@@ -77,4 +83,31 @@ section h2, .articles article {
 
 section h2 {
     font-size: 32px;
+}
+#sports {
+    background-color: rgba(0, 255, 0, 0.1);
+}
+#sports .articles article a {
+    background-color: #009432
+}
+#economy {
+    background-color: #a7a853;
+}
+#economy .articles article a {
+    background-color: #ff9f1a;
+}
+#tecnology .articles article a {
+    background-color: #4a5a55;
+}
+#tecnology {
+    background-color: #416b5e;
+}
+#entertainment {
+    background-color: #586875;
+}
+#entertainment .articles article a {
+    background-color: #094e38;
+}
+img:hover {
+    width: 200%;
 }
