--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
 }
 
+header, section h2 {
+    font-family: 'Bungee', cursive;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+header h1, section h2 {
+    font-weight: normal;
+}
+
 header {
     padding: 16px 0;
     background-color: #182C61;
@@ -12,8 +24,8 @@ header {
 
 header nav li {
     display: inline;
-    margin-left: 16px;
-    font-size: 24px;
+    margin-left: 24px;
+    font-size: 18px;
 }
 header nav li a {
     color: #ecf0f1;
@@ -26,8 +38,36 @@ header nav li a {
     margin: 0 auto;
 }
 
-header .container {
+header .container, section .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.brands-list  img {
+height: 24px;
+}
+
+.brands-list li {  
+    display: inline;
+    margin-right: 8px;
+}
+
+section .container {
+    align-items: flex-start;
+}
+
+section {
+    padding: 24px 0;
+    color: #182C61;
+}
+section h2 {
+    margin-bottom: 16px;
+    
+}
+section p {
+    margin-bottom: 8px;
+}
+
+.store-front{
+    margin-right: 32px;
 }
