--- a/style.css
+++ b/style.css
@@ -71,3 +71,23 @@ section p {
 .store-front{
     margin-right: 32px;
 }
+
+.social-links img {
+    height: 24px;
+}
+
+#contact .container {
+    display: block;
+}
+.contact-methods {
+    display: flex;
+}
+
+form textarea,
+form input,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
