--- a/Projeto2/main.css
+++ b/Projeto2/main.css
@@ -28,6 +28,13 @@ header h1 {
     width: 100%;
     margin: 0 auto;
 }
+form {
+    display: flex;
+    max-width: 640px;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 56px;
+}
 form input {
     font-size: 24px;
     background-color: #fff;
@@ -42,4 +49,39 @@ form button {
     font-weight: bold;
     border: none;
     cursor: pointer;
+}
+table {
+    width: 100%;
+}
+
+table th {
+    border-bottom: 2px solid #000;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
+}
+table td {
+    padding: 16px 0;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: 1px solid rgba(0, 0, 0,  0.1);
+}
+table td img {
+    height: 30px;
+}
+
+.resultado {
+    padding: 8px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000;
+    border-radius: 3px;
+}
+
+.aprovado {
+    background-color: #009432;
+}
+
+.reprovado {
+    background-color: red;
 }
